Add Github OAuth Config

--- a/index.html
+++ b/index.html
@@ -19,5 +19,8 @@
 <body>
     <h1>Git innit? Hehe</h1>
     <h2>Lalala</h2>
+    <script>
+        document.write(global.location.search)
+    </script>
 </body>
 </html>
