--- a/index.html
+++ b/index.html
@@ -1,26 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Git for Musicians</title>
-    <style>
-        body{
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-            background: linear-gradient(to bottom right, #a9fff8, rgb(137, 178, 255));
-            background-size: cover;
-            background-repeat: no-repeat;
-            min-height: 100vh;
-        }
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Git for Musicians</title>
+		<style>
+			body {
+				font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+					Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+				background: linear-gradient(to bottom right, #a9fff8, rgb(137, 178, 255));
+				background-size: cover;
+				background-repeat: no-repeat;
+				min-height: 100vh;
+			}
+		</style>
+	</head>
+	<body>
+		<header>
+			<div>
+				<h3>img</h3>
+				<h3>Username</h3>
+			</div>
+		</header>
 
-    </style>
-</head>
-<body>
-    <h1>Git innit? Hehe</h1>
-    <h2>Lalala</h2>
-    <script>
-        document.write(global.location.search)
-    </script>
-</body>
+		<!--Left div-->
+		<div>
+			<nav>
+				<!--Vertical Nav-->
+				<h3>General</h3>
+				<ul>
+					<li>Home</li>
+					<li>Projects</li>
+					<li>Start a new project</li>
+					<li>Manage Samples</li>
+				</ul>
+				<h3>Account</h3>
+				<ul>
+					<li>Sign out</li>
+				</ul>
+			</nav>
+		</div>
+
+		<!--Right Div-->
+		<div>
+			<!--Top buttons Div-->
+			<div>
+				<button>Retrive changes from repo</button>
+				<button>Apply changes to repo</button>
+			</div>
+			<!-- Recent Projects -->
+			<div>
+				<ul>
+					<!--li will be cards -->
+					<li>Project 1</li>
+					<li>Project 2</li>
+					<li>Project 3</li>
+				</ul>
+			</div>
+		</div>
+
+		<script>
+			document.write(global.location.search);
+		</script>
+	</body>
 </html>
+
+<!--
+    home 
+    projects 
+    git init
+    samples
+
+
+    sign out
+-->
